Compiler/rexlang_compiler/gen/rexLangParser.cpp

// Generated from /mnt/e/Project/REXLang/Compiler/rexlang_compiler/rexLang.g4 by ANTLR 4.7.2


#include "rexLangListener.h"
#include "rexLangVisitor.h"

#include "rexLangParser.h"


using namespace antlrcpp;
using namespace rexlang;
using namespace antlr4;

rexLangParser::rexLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

rexLangParser::~rexLangParser() {
  delete _interpreter;
}

std::string rexLangParser::getGrammarFileName() const {
  return "rexLang.g4";
}

const std::vector<std::string>& rexLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& rexLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Rexlang_srcContext ------------------------------------------------------------------

rexLangParser::Rexlang_srcContext::Rexlang_srcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

rexLangParser::Edition_specContext* rexLangParser::Rexlang_srcContext::edition_spec() {
  return getRuleContext<rexLangParser::Edition_specContext>(0);
}

rexLangParser::Src_contentContext* rexLangParser::Rexlang_srcContext::src_content() {
  return getRuleContext<rexLangParser::Src_contentContext>(0);
}

tree::TerminalNode* rexLangParser::Rexlang_srcContext::EOF() {
  return getToken(rexLangParser::EOF, 0);
}

std::vector<tree::TerminalNode *> rexLangParser::Rexlang_srcContext::NEWLINE() {
  return getTokens(rexLangParser::NEWLINE);
}

tree::TerminalNode* rexLangParser::Rexlang_srcContext::NEWLINE(size_t i) {
  return getToken(rexLangParser::NEWLINE, i);
}


size_t rexLangParser::Rexlang_srcContext::getRuleIndex() const {
  return rexLangParser::RuleRexlang_src;
}

void rexLangParser::Rexlang_srcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRexlang_src(this);
}

void rexLangParser::Rexlang_srcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRexlang_src(this);
}


antlrcpp::Any rexLangParser::Rexlang_srcContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitRexlang_src(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Rexlang_srcContext* rexLangParser::rexlang_src() {
  Rexlang_srcContext *_localctx = _tracker.createInstance<Rexlang_srcContext>(_ctx, getState());
  enterRule(_localctx, 0, rexLangParser::RuleRexlang_src);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(78);
    edition_spec();
    setState(82);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(79);
        match(rexLangParser::NEWLINE); 
      }
      setState(84);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(85);
    src_content();
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rexLangParser::NEWLINE) {
      setState(86);
      match(rexLangParser::NEWLINE);
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    match(rexLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Src_contentContext ------------------------------------------------------------------

rexLangParser::Src_contentContext::Src_contentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

rexLangParser::Program_set_fileContext* rexLangParser::Src_contentContext::program_set_file() {
  return getRuleContext<rexLangParser::Program_set_fileContext>(0);
}

rexLangParser::Data_structure_fileContext* rexLangParser::Src_contentContext::data_structure_file() {
  return getRuleContext<rexLangParser::Data_structure_fileContext>(0);
}

rexLangParser::Global_variable_fileContext* rexLangParser::Src_contentContext::global_variable_file() {
  return getRuleContext<rexLangParser::Global_variable_fileContext>(0);
}

rexLangParser::Dll_define_fileContext* rexLangParser::Src_contentContext::dll_define_file() {
  return getRuleContext<rexLangParser::Dll_define_fileContext>(0);
}


size_t rexLangParser::Src_contentContext::getRuleIndex() const {
  return rexLangParser::RuleSrc_content;
}

void rexLangParser::Src_contentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSrc_content(this);
}

void rexLangParser::Src_contentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSrc_content(this);
}


antlrcpp::Any rexLangParser::Src_contentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitSrc_content(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Src_contentContext* rexLangParser::src_content() {
  Src_contentContext *_localctx = _tracker.createInstance<Src_contentContext>(_ctx, getState());
  enterRule(_localctx, 2, rexLangParser::RuleSrc_content);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(94);
      program_set_file();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(95);
      data_structure_file();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(96);
      global_variable_file();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(97);
      dll_define_file();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_set_fileContext ------------------------------------------------------------------

rexLangParser::Program_set_fileContext::Program_set_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

rexLangParser::Prog_setContext* rexLangParser::Program_set_fileContext::prog_set() {
  return getRuleContext<rexLangParser::Prog_setContext>(0);
}

std::vector<tree::TerminalNode *> rexLangParser::Program_set_fileContext::NEWLINE() {
  return getTokens(rexLangParser::NEWLINE);
}

tree::TerminalNode* rexLangParser::Program_set_fileContext::NEWLINE(size_t i) {
  return getToken(rexLangParser::NEWLINE, i);
}

std::vector<tree::TerminalNode *> rexLangParser::Program_set_fileContext::IDENTIFIER() {
  return getTokens(rexLangParser::IDENTIFIER);
}

tree::TerminalNode* rexLangParser::Program_set_fileContext::IDENTIFIER(size_t i) {
  return getToken(rexLangParser::IDENTIFIER, i);
}


size_t rexLangParser::Program_set_fileContext::getRuleIndex() const {
  return rexLangParser::RuleProgram_set_file;
}

void rexLangParser::Program_set_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram_set_file(this);
}

void rexLangParser::Program_set_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram_set_file(this);
}


antlrcpp::Any rexLangParser::Program_set_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitProgram_set_file(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Program_set_fileContext* rexLangParser::program_set_file() {
  Program_set_fileContext *_localctx = _tracker.createInstance<Program_set_fileContext>(_ctx, getState());
  enterRule(_localctx, 4, rexLangParser::RuleProgram_set_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rexLangParser::T__0) {
      setState(100);
      match(rexLangParser::T__0);
      setState(101);
      dynamic_cast<Program_set_fileContext *>(_localctx)->identifierToken = match(rexLangParser::IDENTIFIER);
      dynamic_cast<Program_set_fileContext *>(_localctx)->libraries.push_back(dynamic_cast<Program_set_fileContext *>(_localctx)->identifierToken);
      setState(102);
      match(rexLangParser::NEWLINE);
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rexLangParser::NEWLINE) {
      setState(108);
      match(rexLangParser::NEWLINE);
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(114);
    prog_set();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_structure_fileContext ------------------------------------------------------------------

rexLangParser::Data_structure_fileContext::Data_structure_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<rexLangParser::Struct_declareContext *> rexLangParser::Data_structure_fileContext::struct_declare() {
  return getRuleContexts<rexLangParser::Struct_declareContext>();
}

rexLangParser::Struct_declareContext* rexLangParser::Data_structure_fileContext::struct_declare(size_t i) {
  return getRuleContext<rexLangParser::Struct_declareContext>(i);
}


size_t rexLangParser::Data_structure_fileContext::getRuleIndex() const {
  return rexLangParser::RuleData_structure_file;
}

void rexLangParser::Data_structure_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterData_structure_file(this);
}

void rexLangParser::Data_structure_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitData_structure_file(this);
}


antlrcpp::Any rexLangParser::Data_structure_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitData_structure_file(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Data_structure_fileContext* rexLangParser::data_structure_file() {
  Data_structure_fileContext *_localctx = _tracker.createInstance<Data_structure_fileContext>(_ctx, getState());
  enterRule(_localctx, 6, rexLangParser::RuleData_structure_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rexLangParser::T__6) {
      setState(116);
      struct_declare();
      setState(121);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_variable_fileContext ------------------------------------------------------------------

rexLangParser::Global_variable_fileContext::Global_variable_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

rexLangParser::Global_variable_listContext* rexLangParser::Global_variable_fileContext::global_variable_list() {
  return getRuleContext<rexLangParser::Global_variable_listContext>(0);
}


size_t rexLangParser::Global_variable_fileContext::getRuleIndex() const {
  return rexLangParser::RuleGlobal_variable_file;
}

void rexLangParser::Global_variable_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal_variable_file(this);
}

void rexLangParser::Global_variable_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal_variable_file(this);
}


antlrcpp::Any rexLangParser::Global_variable_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitGlobal_variable_file(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Global_variable_fileContext* rexLangParser::global_variable_file() {
  Global_variable_fileContext *_localctx = _tracker.createInstance<Global_variable_fileContext>(_ctx, getState());
  enterRule(_localctx, 8, rexLangParser::RuleGlobal_variable_file);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    global_variable_list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Dll_define_fileContext ------------------------------------------------------------------

rexLangParser::Dll_define_fileContext::Dll_define_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<rexLangParser::Dll_commandContext *> rexLangParser::Dll_define_fileContext::dll_command() {
  return getRuleContexts<rexLangParser::Dll_commandContext>();
}

rexLangParser::Dll_commandContext* rexLangParser::Dll_define_fileContext::dll_command(size_t i) {
  return getRuleContext<rexLangParser::Dll_commandContext>(i);
}

std::vector<rexLangParser::Lib_commandContext *> rexLangParser::Dll_define_fileContext::lib_command() {
  return getRuleContexts<rexLangParser::Lib_commandContext>();
}

rexLangParser::Lib_commandContext* rexLangParser::Dll_define_fileContext::lib_command(size_t i) {
  return getRuleContext<rexLangParser::Lib_commandContext>(i);
}


size_t rexLangParser::Dll_define_fileContext::getRuleIndex() const {
  return rexLangParser::RuleDll_define_file;
}

void rexLangParser::Dll_define_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDll_define_file(this);
}

void rexLangParser::Dll_define_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDll_define_file(this);
}


antlrcpp::Any rexLangParser::Dll_define_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitDll_define_file(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Dll_define_fileContext* rexLangParser::dll_define_file() {
  Dll_define_fileContext *_localctx = _tracker.createInstance<Dll_define_fileContext>(_ctx, getState());
  enterRule(_localctx, 10, rexLangParser::RuleDll_define_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(136);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == rexLangParser::T__1) {
        setState(124);
        dll_command();
        setState(129);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == rexLangParser::T__3) {
        setState(130);
        lib_command();
        setState(135);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Dll_commandContext ------------------------------------------------------------------

rexLangParser::Dll_commandContext::Dll_commandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> rexLangParser::Dll_commandContext::NEWLINE() {
  return getTokens(rexLangParser::NEWLINE);
}

tree::TerminalNode* rexLangParser::Dll_commandContext::NEWLINE(size_t i) {
  return getToken(rexLangParser::NEWLINE, i);
}

std::vector<tree::TerminalNode *> rexLangParser::Dll_commandContext::IDENTIFIER() {
  return getTokens(rexLangParser::IDENTIFIER);
}

tree::TerminalNode* rexLangParser::Dll_commandContext::IDENTIFIER(size_t i) {
  return getToken(rexLangParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> rexLangParser::Dll_commandContext::STRING_LITERAL() {
  return getTokens(rexLangParser::STRING_LITERAL);
}

tree::TerminalNode* rexLangParser::Dll_commandContext::STRING_LITERAL(size_t i) {
  return getToken(rexLangParser::STRING_LITERAL, i);
}

rexLangParser::Parameter_decl_listContext* rexLangParser::Dll_commandContext::parameter_decl_list() {
  return getRuleContext<rexLangParser::Parameter_decl_listContext>(0);
}

rexLangParser::Table_commentContext* rexLangParser::Dll_commandContext::table_comment() {
  return getRuleContext<rexLangParser::Table_commentContext>(0);
}


size_t rexLangParser::Dll_commandContext::getRuleIndex() const {
  return rexLangParser::RuleDll_command;
}

void rexLangParser::Dll_commandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDll_command(this);
}

void rexLangParser::Dll_commandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rexLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDll_command(this);
}


antlrcpp::Any rexLangParser::Dll_commandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<rexLangVisitor*>(visitor))
    return parserVisitor->visitDll_command(this);
  else
    return visitor->visitChildren(this);
}

rexLangParser::Dll_commandContext* rexLangParser::dll_command() {
  Dll_commandContext *_localctx = _tracker.createInstance<Dll_commandContext>(_ctx, getState());
  enterRule(_localctx, 12, rexLangParser::RuleDll_command);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(138);
    match(rexLangParser::T__1);
    setState(139);
    dynamic_cast<Dll_commandContext *>(_localctx)->name = match(rexLangParser::IDENTIFIER);
    setState(140);
    match(rexLangParser::T__2);
    setState(142);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == rexLangParser::IDENTIFIER) {
      setState(141);
      dynamic_cast<Dll_commandContext *>(_localctx)->type = match(rexLangParser::IDENTIFIER);
    }
    setState(144);
    match(rexLangParser::T__2);
    setState(146);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == rexLangParser::STRING_LITERAL) {
      setState(145);
      dynamic_cast<Dll_commandContext *>(_localctx)->file = match(rexLangParser::STRING_LITERAL);
    }
    setState(148);
    match(rexLangParser::T__2);
    setState(149);
    dynamic_cast<Dll_commandContext *>(_localctx)->cmd = match(rexLangParser::STRING_LITERAL);
    setState(150);
    match(rexLangParser::T__2);
    setState(154);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rexLangParser::IDENTIFIER) {
      setState(151);
      dynamic_cast<Dll_commandContext *>(_localctx)->identifierToken = match(rexLangParser::IDENTIFIER);
      dynamic_cast<Dll_commandContext *>(_localctx)->attributes.push_back(dynamic_cast<Dll_commandContext *>(_localctx)->identifierToken);
      setState(156);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(159);
    _errHandler->sync(this);
